--- a/samples/KristofferStrube.Blazor.MediaStreamRecording.WasmExample/wwwroot/index.html
+++ b/samples/KristofferStrube.Blazor.MediaStreamRecording.WasmExample/wwwroot/index.html
@@ -40,6 +40,10 @@
             window.location.replace(window.location.origin + window.location.pathname + '/' + window.location.search);
         }
     </script>
+    <script>
+        function getReference(element) { return element; }
+        function setAttribute(element, attribute, value) { element[attribute] = value; }
+    </script>
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link rel="stylesheet" href="css/app.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
